--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Rock Paper Scissors</string>
+  <string name="app_name">Fire Alarm Demo</string>
   <string name="error_missing_permissions">Cannot start without required permissions</string>
 
   <string name="codename">Your codename: %s</string>
@@ -17,12 +17,12 @@
   <string name="tie_message">You both chose %s</string>
   <string name="loss_message">%1$s loses to %2$s…</string>
 
-  <string name="action_find_opponents">Find opponent</string>
+  <string name="action_find_opponents">FIRE ALARM</string>
   <string name="action_disconnect">Disconnect</string>
 
-  <string name="choice_rock">Rock</string>
-  <string name="choice_paper">Paper</string>
-  <string name="choice_scissors">Scissors</string>
+  <string name="choice_rock">Earthquake</string>
+  <string name="choice_paper">Emergency</string>
+  <string name="choice_scissors">Shootout</string>
 
   <string name="game_score">%1$d : %2$d</string>
 </resources>
